# wcb-rs

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: publish.yml
src/: cli.rs  client.rs  main.rs
