[package]
name = "wcb"
description = "WebCrypto compatible encryption CLI"
version = "2.0.1"
edition = "2021"
documentation = "https://docs.rs/webcryptobox/latest/wcb/"
homepage = "https://github.com/jo/wcb-rs"
repository = "https://github.com/jo/wcb-rs"
readme = "README.md"
license = "Apache-2.0"
authors = ["Johannes J. Schmidt <schmidt@pm.me>"]
keywords = ["WebCrypto", "crypto", "ec", "aes", "cli"]

[dependencies]
webcryptobox = "2.0.0"
clap = { version = "3.1.6", features = ["derive", "env"] }
hex = "0.4.3"
base64 = "0.13.0"

[build-dependencies]
clap = { version = "3.1.6", features = ["derive", "env"] }
clap_complete = "3.1.1"
